Setup the route for the Home navigation link

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,3 +1,16 @@
 #logo {
     font-size: 1.75rem;
 }
+
+#header-nav li {
+    list-style-type: none;
+}
+
+#header-nav a {
+    font-size: 1rem;
+    text-decoration-line: none;
+}
+
+#header-nav a.active {
+    color: #f57224
+}
