--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -8,11 +8,12 @@
 }
 
 :root {
-    --secondary-color: #252525;
+    --secondary-color: hsl(0, 0%, 15%);
 }
 
 body {
     min-width: 43.75rem;
+    background-color: #f9f9f9;
 }
 
 .App {
