--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -19,3 +19,17 @@ body {
 .App {
     padding: 0.9375rem calc(0.9375rem * 5);
 }
+
+.navbar li {
+    list-style-type: none;
+}
+
+.navbar a {
+    font-size: 1rem;
+    text-decoration-line: none;
+    color: var(--secondary-color)
+}
+
+.navbar a.active {
+    color: #f57224
+}
