Horizontally align the app header's navbar

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -11,3 +11,8 @@
     align-items: center;
     margin-left: auto;
 }
+
+#header-nav li {
+    display: inline-block;
+    margin-right: 2.1875rem;
+}
