--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -18,5 +18,6 @@ body {
 }
 
 .App {
-    padding: 0.9375rem calc(0.9375rem * 5);
+    /* padding: 0.9375rem calc(0.9375rem * 5); */
+    padding: 0.9375rem clamp(1rem, 5vw, 10rem)
 }
