--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,5 +1,8 @@
 #app-header {
     display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    row-gap: calc(1.5625rem / 2);
 }
 
 #logo {
@@ -9,7 +12,6 @@
 #header-nav {
     display: flex;
     align-items: center;
-    margin-left: auto;
 }
 
 #header-nav li {
