Prevent app header's navigation link from being push when a click occurs

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -14,9 +14,12 @@
     align-items: center;
 }
 
+#header-nav > ul {
+    display: flex;
+    gap: 2.1875rem;
+}
+
 #header-nav li {
-    display: inline-block;
-    margin-right: 2.1875rem;
     list-style-type: none;
 }
 
