--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -15,14 +15,19 @@
 body {
     min-width: 22.5rem;
     background-color: #f9f9f9;
+    border: 1px solid #f9f9f9;
+}
+
+body,
+.App,
+#root {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
 .App {
-    padding: 0.9375rem clamp(1rem, 5vw, 10rem)
-}
-
-body {
-    min-height: 100vh;
+    padding: 0.9375rem clamp(1rem, 5vw, 10rem);
 }
 
 #shop-body>p,
